--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,26 @@ jobs:
           push: true
           tags: |
             murichristopher/webcolor_app_image:blue
+
+  CI-GREEN:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.1.0
+      
+      - name: Autenticação no Docker Hub
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+
+      - name: Criando o arquivo HTML com o green page
+        run: sed "s/{{COLOR}}/green/g" lib/webcolor/templates/index.html.eex.template > lib/webcolor/templates/index.html.eex  
+
+      - name: Construção da imagem Docker do green page
+        uses: docker/build-push-action@v3.2.0
+        with: 
+          context: ./src
+          file: ./src/Dockerfile
+          push: true
+          tags: |
+            murichristopher/webcolor_app_image:green
