--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            murichristopher/webcolor_app_image:blue
+            murichristopher/webcolor_app_image:green
 
