--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,26 @@ jobs:
           tags: |
             murichristopher/webcolor_app_image:green
 
+  CI-WHITE:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.1.0
+      
+      - name: Autenticação no Docker Hub
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+
+      - name: Criando o arquivo HTML com o white page
+        run: sed "s/{{COLOR}}/white/g" lib/webcolor/templates/index.html.eex.template > lib/webcolor/templates/index.html.eex  
+
+      - name: Construção da imagem Docker do white page
+        uses: docker/build-push-action@v3.2.0
+        with: 
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: |
+            murichristopher/webcolor_app_image:white
+
